--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "storybook": "start-storybook -p 6006 -s public",
+    "chromatic": "npx chromatic",
     "build-storybook": "build-storybook -s public"
   },
   "eslintConfig": {
@@ -66,5 +67,7 @@
     "prettier": "2.8.3",
     "prop-types": "15.8.1",
     "webpack": "5.75.0"
-  }
+  },
+  "readme": "ERROR: No README data found!",
+  "_id": "design-system@0.1.0"
 }
