docs: add Auto as a dependency in the README

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "build": "cross-env BABEL_ENV=production babel src -d dist",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
+    "release": "auto shipit --base-branch=main",
     "storybook": "start-storybook -p 6006 -s public",
     "chromatic": "npx chromatic --project-token=${process.env.CHROMATIC_PROJECT_TOKEN}",
     "build-storybook": "build-storybook -s public",
