--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ozow-ui",
-  "version": "0.1.3--canary.f6d44bb.0",
+  "version": "0.1.6",
   "private": false,
   "dependencies": {
     "@testing-library/jest-dom": "5.16.5",
