--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "@storybook/addon-essentials": "6.5.16",
     "@storybook/addon-interactions": "6.5.16",
     "@storybook/addon-links": "6.5.16",
+    "@storybook/addons": "6.5.16",
     "@storybook/builder-webpack5": "6.5.16",
     "@storybook/jest": "0.0.10",
     "@storybook/manager-webpack5": "6.5.16",
@@ -78,6 +79,7 @@
     "@storybook/react": "6.5.16",
     "@storybook/test-runner": "0.9.4",
     "@storybook/testing-library": "0.0.13",
+    "@storybook/theming": "6.5.16",
     "auto": "10.37.6",
     "babel-plugin-named-exports-order": "0.0.2",
     "chromatic": "6.15.0",
