--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
     "@testing-library/jest-dom": "5.16.5",
     "@testing-library/react": "13.4.0",
     "@testing-library/user-event": "13.5.0",
+    "chart.js": "4.2.0",
     "polished": "4.2.2",
     "react": "^18.2.0",
+    "react-chartjs-2": "5.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "6.8.0",
     "react-scripts": "5.0.1",
@@ -65,6 +67,7 @@
   },
   "devDependencies": {
     "@babel/cli": "7.20.7",
+    "@faker-js/faker": "7.6.0",
     "@storybook/addon-a11y": "6.5.16",
     "@storybook/addon-actions": "6.5.16",
     "@storybook/addon-essentials": "6.5.16",
